tests/NormalTests/paczka1/fuzzy1/12384335.err
Error in line 2: QXjAl A349 35,9
Error in line 8: SLS A413 81,4
Error in line 11: SLS A241 86,9
Error in line 12: QXjAl A349 97,1
Error in line 23: aHLrxs6cR8 A241 31,4
Error in line 35: pLZ A241 70,5
Error in line 37: zlh7WvA A617 391,13
